Fix for page overflow

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -11,7 +11,6 @@
 html,
 body {
     height: 100%;
-    overflow: auto;
 }
 
 body {
